# goober-counting

./: Cargo.toml  flake.nix
src/: main.rs
