[package]
name = "goober-counting"
version = "0.1.0"
edition = "2024"
# Latest version available on nixos-25.05
rust-version = "1.89"

[dependencies]
ciborium = "0.2.2"
directories = "6.0.0"
dotenvy = "0.15.7"
# This revision has support for binary and octal, but hasn't been included in a release yet as of writing.
evalexpr = { git = "https://github.com/ISibboI/evalexpr.git", rev = "e5eecfe8248b7eb6ce7a860b352d7ed966a510ef" }
poise = "0.6.1"
poise_error = "1.6.0"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
tracing = "0.1.41"
tracing-journald = "0.3.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
